--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,8 +1,16 @@
-#hero-div {
+.hero-banner {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../img/banner.jpg");
   background-size: cover;
   background-position: 0% 75%;
   background-blend-mode: darken;
   color: white;
+}
+
+.business-hours th {
+    text-align: left;
+}
+
+.business-hours h2 {
+    text-align: center;
 }
